--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ArticleController!{% endblock %}
+{% block title %}Le Bocal{% endblock %}
 
 {% block body %}
 <style>
@@ -9,7 +9,9 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Le Bocal {{ controller_name }}! ✅</h1>
+    <h2>La vie n’est pas un problème à résoudre, mais une réalité à vivre.</h2>
+    <p>Il est important de se concentrer sur une l’expérience de la vie, de trouver un sens à la vie et de savourer chaque moment, plutôt que de chercher à résoudre des problèmes ou à atteindre des objectifs.</p>
 
     This friendly message is coming from:
     <ul>
