--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -8,15 +8,22 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1>Le Bocal {{ controller_name }}! ✅</h1>
-    <h2>La vie n’est pas un problème à résoudre, mais une réalité à vivre.</h2>
-    <p>Il est important de se concentrer sur une l’expérience de la vie, de trouver un sens à la vie et de savourer chaque moment, plutôt que de chercher à résoudre des problèmes ou à atteindre des objectifs.</p>
+<section class="section-main-1">
+    <div class="container text-center">
+        <div class="row align-items-center">
+            <div class="col-lg-1 text-center">
+            </div>
+            <div class="col-lg-2 text-center">
+              <img src="{{asset('images/4.png')}}" alt="icone légumes">
+            </div>
+            <div class="col-lg-6 text-center">
+              <h2>Les fiches pratiques des bocaux</h2>
+            </div>
+            <div class="col-lg-1 text-center">
+              <img src="{{asset('images/5.png')}}" alt="icone légumes">
+            </div>
+        </div>
+    </div>
+</section>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/HB/symfony/bocal/src/Controller/ArticleController.php</code></li>
-        <li>Your template at <code>C:/Users/HB/symfony/bocal/templates/article/index.html.twig</code></li>
-    </ul>
-</div>
 {% endblock %}
