--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -34,3 +34,150 @@
         </div>
     </div>
 </section>
+    <section class="section-main-3">
+        <div class="container">
+          <div class="row gx-5 mb-4 lg-12">
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/noisette.webp')}}" alt="Salade" class="logo">
+                  <div class="card-body">
+                    <h3>Cake noisette et zeste de citron.</h3>
+                    <p class="card-text">Ce gâteau noisette et zeste de citron est exquis servi tel quel ou accompagné d'une tasse de thé ou de café. Son goût raffiné de noisette avec la touche acidulée du citron en fait une excellente option pour toutes sortes d'occasions.</p>
+                    <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                  </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/betteraves.webp')}}" alt="Salade" class="logo">
+                <div class="card-body">
+                  <h3>Céleri et betteraves fermentées.</h3>
+                  <p class="card-text">Cette préparation de céleri et betteraves fermentées est excellente pour ajouter une touche de couleur et de saveur probiotique à vos repas. Vous pouvez les utiliser comme garniture sur des salades, dans des sandwiches, ou simplement les savourer seuls en snack santé.</p>
+                  <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/Muffins.webp')}}" alt="Salade" class="logo">
+                <div class="card-body">
+                  <h3>Muffins géants au chocolat.</h3>
+                  <p class="card-text">Servez ces muffins géants au chocolat seuls ou accompagnés d'un verre de lait froid, d'un café ou d'un thé. Ils sont également délicieux tièdes, avec une boule de glace à la vanille pour une touche extra gourmande.</p>
+                  <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <section class="section-main-4">
+        <div class="container">
+          <div class="row gx-5 mb-4 lg-12">
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/mangue.webp')}}" alt="Salade" class="logo">
+                  <div class="card-body">
+                    <h3>Compote à la Mangue et à la Banane.</h3>
+                    <p class="card-text">Cette tartinade de courgettes et persil est délicieuse sur des tranches de baguette grillée, en sandwich, ou comme accompagnement pour des bâtonnets de légumes frais.</p>
+                    <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                  </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/courgette.webp')}}" alt="Salade" class="logo">
+                <div class="card-body">
+                  <h3 class="card-title">Tartinade Courgettes et Persil.</h3>
+                  <p class="card-text">Cette tartinade de courgettes et persil est délicieuse sur des tranches de baguette grillée, en sandwich, ou comme accompagnement pour des bâtonnets de légumes frais. Elle est non seulement savoureuse mais également saine et rafraîchissante.</p>
+                  <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/ours.webp')}}" alt="Salade" class="logo">
+                <div class="card-body">
+                  <h3>Pesto d'ail des Ours.</h3>
+                  <p class="card-text">AServez votre pesto d'ail des ours avec des pâtes, comme base pour une pizza, ou étalé sur des toasts pour un apéritif. Il est également délicieux mélangé à des vinaigrettes ou utilisé comme marinade pour des viandes ou des légumes grillés.</p>
+                  <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <section class="section-main-5">
+        <div class="container">
+          <div class="row gx-5 mb-4 lg-12">
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/lentilles.webp')}}" alt="Salade" class="logo">
+                  <div class="card-body">
+                    <h3>Recette Tartinade de lentilles corail.</h3>
+                    <p class="card-text">Servez cette tartinade de lentilles corail sur des toasts, des crackers ou avec des bâtonnets de légumes frais. Elle peut également être utilisée comme garniture dans des wraps ou des sandwiches pour un repas léger et savoureux.</p>
+                    <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                  </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/dahl.webp')}}" alt="Salade" class="logo">
+                <div class="card-body">
+                  <h3>Dahl de Lentilles.</h3>
+                  <p class="card-text">Ce dahl de lentilles est parfait pour un repas réconfortant. Il se conserve également très bien, les saveurs se développant encore plus après une nuit au réfrigérateur. </p>
+                  <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/cumin.webp')}}" alt="Salade" class="logo">
+                <div class="card-body">
+                  <h3>Tartinade de Carottes Cumin et Citron.</h3>
+                  <p class="card-text">Servez la tartinade de carottes au cumin et citron sur des toasts croustillants, des crackers, ou comme dip pour des crudités. Elle est également excellente utilisée comme condiment dans des wraps végétariens.</p>
+                  <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <section class="section-main-6">
+        <div class="container">
+          <div class="row gx-5 mb-4 lg-12">
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/betterave.webp')}}" alt="Salade" class="logo">
+                  <div class="card-body">
+                    <h3>Recette Houmous de Betterave.</h3>
+                    <p class="card-text">Servez le houmous de betterave bien frais, accompagné de pain pita chaud, de crackers, ou de légumes crus pour tremper. Il est aussi excellent comme garniture sur des sandwiches ou des wraps.</p>
+                    <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                  </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/cabillaud.webp')}}" alt="Salade" class="logo">
+                <div class="card-body">
+                  <h3>Purée de Cabillaud a la Tomate et au Basilic.</h3>
+                  <p class="card-text">Servez la purée de cabillaud à la tomate et au basilic bien chaude. Elle peut être accompagnée de riz blanc, de pâtes, ou de légumes vapeur pour un repas complet.</p>
+                  <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-lg-4">
+              <div class="card">
+                <img src="{{asset('images/gingembre.webp')}}" alt="Salade" class="logo">
+                <div class="card-body">
+                  <h3>La purée de pommes de terre au gingembre.</h3>
+                  <p class="card-text">Cette purée de pommes de terre au gingembre est excellente avec des rôtis, du poisson grillé ou même comme base pour des plats végétariens. Le gingembre ajoute une touche exotique qui peut transformer un repas ordinaire en un festin spécial.</p>
+                  <button type="button" class="btn btn-primary" data-mdb-ripple-init>VOIR LA FICHE</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
