--- a/templates/article/article.html.twig
+++ b/templates/article/article.html.twig
@@ -17,7 +17,7 @@
               <img src="{{asset('images/4.png')}}" alt="icone légumes">
             </div>
             <div class="col-lg-6 text-center">
-              <h2>Les fiches pratiques des bocaux</h2>
+              <h2>La fiche bocal</h2>
             </div>
             <div class="col-lg-1 text-center">
               <img src="{{asset('images/5.png')}}" alt="icone légumes">
@@ -25,6 +25,26 @@
         </div>
     </div>
 </section>
+
+
+<div class="container">
+  <div class="col-lg-12 mb-lg-4">
+      <div class="card">
+      <img src="{{ asset('images/' ~ article.picture) }}"alt="Carottes" class="logo">
+      <div class="card-body">
+          <h3>{{ article.title }} </h3>
+          <br>
+          <p>{{ article.descript }}</p>
+          <br>
+          <p>{{ article.ingredient }}</p>
+          <br>
+          <p>{{ article.preparation}}</p>
+          <br>
+          <p class="card-text">{{ article.content }}</p>
+      </div>
+      </div>
+  </div>
+</div>
 
 
 {% endblock %}
