--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,18 +3,40 @@
 {% block title %}Hello IndexController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/HB/symfony/bocal/src/Controller/IndexController.php</code></li>
-        <li>Your template at <code>C:/Users/HB/symfony/bocal/templates/index/index.html.twig</code></li>
-    </ul>
-</div>
+<section class="section-main-1">
+    <div class="container text-center">
+        <div class="row align-items-center">
+            <div class="col-lg-1 text-center">
+            </div>
+            <div class="col-lg-2 text-center">
+              <img src="{{asset('images/4.png')}}" alt="icone légumes">
+            </div>
+            <div class="col-lg-6 text-center">
+              <h2>Les fiches pratiques des bocaux</h2>
+            </div>
+            <div class="col-lg-1 text-center">
+              <img src="{{asset('images/5.png')}}" alt="icone légumes">
+            </div>
+        </div>
+    </div>
+</section>
+          
+     
+{% for article in articles %}
+    <div class="container text-center">
+        <div class="col-lg-4 mb-lg-4 text-center">
+            <div class="card">
+                <img src="{{ asset('images/' ~ article.picture) }}"alt="Carottes" class="logo">
+                <div class="card-body">
+                    <h3>{{ article.title }} </h3>
+                    <p class="card-text">{{ article.content }}</p>
+                    <a class="btn btn-primary" href= "{{ path('app_article',{title:article.title}) }}">VOIR LA FICHE</a>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endfor %} 
+
 {% endblock %}
